Completed the required corrections.

--- a/preamble.sty
+++ b/preamble.sty
@@ -21,9 +21,9 @@
 \addbibresource{references.bib}
 
 \newcommand{\cdarrow}{\path[->,font=\scriptsize,>=angle 90]}
-\newcommand{\cdarrowdashed}{\path[->,dashed,font=\scriptsize,>=angle 90]}
-\newcommand{\cdlinedashed}{\path[-,dashed,font=\scriptsize,>=angle 90]}
-\newcommand{\cdline}{\path[-,font=\scriptsize,>=angle 90]}
+%\newcommand{\cdarrowdashed}{\path[->,dashed,font=\scriptsize,>=angle 90]}
+%\newcommand{\cdlinedashed}{\path[-,dashed,font=\scriptsize,>=angle 90]}
+%\newcommand{\cdline}{\path[-,font=\scriptsize,>=angle 90]}
 
 \newcommand{\blankpage}{%
 	\null
