--- a/preamble.sty
+++ b/preamble.sty
@@ -11,7 +11,7 @@
 
 \usepackage{hyperref} 	% enable navigation hyperlinks
 \usepackage{tikz} % Diagrams
-\usetikzlibrary{matrix,arrows,decorations.pathmorphing}
+\usetikzlibrary{matrix,arrows,decorations.pathmorphing,cd}
 \usepackage[bottom=4cm,top=3cm,left=4cm,right=3cm]{geometry}
 \usepackage{biblatex}
 \usepackage{afterpage}
@@ -20,7 +20,7 @@
 
 \addbibresource{references.bib}
 
-\newcommand{\cdarrow}{\path[->,font=\scriptsize,>=angle 90]}
+%\newcommand{\cdarrow}{\path[->,font=\scriptsize,>=angle 90]}
 %\newcommand{\cdarrowdashed}{\path[->,dashed,font=\scriptsize,>=angle 90]}
 %\newcommand{\cdlinedashed}{\path[-,dashed,font=\scriptsize,>=angle 90]}
 %\newcommand{\cdline}{\path[-,font=\scriptsize,>=angle 90]}
@@ -161,7 +161,7 @@
 % transpose symbol
 \newcommand{\transpose}{\top}
 % transpose involution on the generic algebra
-\newcommand{\antipode}[1]{\mathfrak{S}{(#1)}}
+\newcommand{\antipode}[1]{\mathfrak{S}{\left(#1\right)}}
 % cyclic translation on generic algebra
 \newcommand{\rotation}[1]{\tau{(#1)}}
 
